# SimFishWeb

./: .gitignore  README.md  render_preview.py
.claude/: settings.local.json
.github/workflows/: release.yml
container/: Containerfile  entrypoint.sh  subset-fonts.py
data-schemas/: README.md  validate.py
data-schemas/examples/: aquasoil.json  crownleaf.json  glassdart.json  lava_rock.json  mudsifter.json  riverblade.json  seiryu_stone.json  spiralsnail.json  spirevine.json
data-schemas/schemas/: fauna.schema.json  plant.schema.json  substrate.schema.json
docs/: GOALS.md  index.html  style.css
shaders-godot/: README.md  make_palette.py  palette_quantize.gdshader  sim_driver.gd  water_volumetrics.gdshader
shaders-godot/godot-project/: capture.tscn  capture_quantized.png.import  capture_raw.png.import  export_presets.cfg  main.tscn  project.godot
shaders-godot/godot-project/.godot/: global_script_class_cache.cfg
shaders-godot/godot-project/palettes/: planted_48.png.import
shaders-godot/godot-project/scripts/: algae.gd  ambient_audio.gd  branch_plant.gd  branch_plant.gd.uid  camera_orbit.gd  camera_orbit.gd.uid  capture.gd  capture.gd.uid  cattail_plant.gd  egg.gd  egg.gd.uid  fish.gd  fish.gd.uid  fish_store.gd  fractal_moss.gd  leaf_shapes.gd  lily_pad.gd  main.gd  main.gd.uid  mobile_hud.gd  mobile_hud.gd.uid  nautilus_plant.gd  plant.gd  plant.gd.uid  render_panel.gd  settings_panel.gd  (+20 more)
sim-rust/: Cargo.toml  README.md
sim-rust/examples/: cycle.rs
sim-rust/src/: chemistry.rs  grid.rs  lib.rs  substrate.rs  world.rs
style-guide/: STYLE_GUIDE.md
(+19 files in other folders)
